# Accelerating-DTW-Subsequence-Search-with-CUDA-GPU

./: .gitignore  CONTRIBUTING.md  MD_DTW  MD_DTW.cu  MTS.xlsx  Makefile.am  Makefile.am.sh  README.md  TEST  configure.ac  configure.ac.sh  header.h  module.cu  paper.bib  paper.md
data/classification/: info
data/classification/rm_0/: LABEL
data/classification/rm_1/: X_MAT  Y_MAT  Z_MAT
data/classification/rm_2/: TEST  TRAIN
data/subseq_search/: Q_series  T_series
dataset/ECG/old/: chfdb_chf01_250_Q1.txt  chfdb_chf01_250_Q2.txt  chfdb_chf01_3751_T1.txt  chfdb_chf01_3751_T2.txt  chfdb_chf13_130_Q1.txt  chfdb_chf13_151_Q2.txt  chfdb_chf13_3751_T1.txt  chfdb_chf13_3751_T2.txt  dtw_c.mexmaci64  ltstdb_230_Q2.txt  ltstdb_3750_T2.txt  mitdb__240_Q2.txt  mitdb__290_Q1.txt  mitdb__5401_T1.txt  mitdb__5401_T2.txt  xmitdb_x5400_T1.txt  xmitdb_x5400_T2.txt  xmitdb_x_345_Q2.txt  xmitdb_x_360_Q1.txt
dataset/_classification/: light_curve_test_vec  syntheticControlLabeled.txt
dataset/chfdb/chf01/: ECG1_15000sample  ECG1_2500sample  ECG1_90000sample  ECG1_Q100  ECG1_Q1000.txt  ECG1_Q200  ECG1_Q250.txt  ECG1_Q300  ECG1_Q400  ECG1_Q500  ECG1_Q500.txt  ECG1_Q600  ECG1_Q700  ECG1_Q750.txt  ECG1_Q800  ECG1_Q900  ECG2_15000sample  ECG2_2500sample  ECG2_90000sample  ECG2_Q100  ECG2_Q1000  ECG2_Q200  ECG2_Q250  ECG2_Q300  ECG2_Q400  ECG2_Q500  ECG2_Q600  ECG2_Q700  ECG2_Q750  ECG2_Q800  ECG2_Q900
doc/html/: _m_d___d_t_w_8c.html  _m_d___d_t_w_8c_source.html  _m_d___d_t_w_8cpp.html  annotated.html  classes.html  dir_629a7853e462c72e6b3c085afecc0948.html  dir_7be3936f4a7c606a0a7d13974c028875.html  dir_927f8ae3c4b78b53d10e908f13bb046c.html  dir_943a3853a83f7361190eb0f179d88664.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d522931ffa1371640980b621734a4381.html  dir_e2c5febc820c466ac1c5c0ea56bce95f.html  files.html  globals.html  globals_func.html  header_8h_source.html  index.html  md__c_1__users_d_8nardone__desktop__m_t_s_s-_multivariate-_time-_series-_software__c_o_n_t_r_i_b_u_t_i_n_g.html  md__c_1__users_d_8nardone__desktop__m_t_s_s-_multivariate-_time-_series-_software__r_e_a_d_m_e.html  md__c_1__users_d_8nardone__desktop__m_t_s_s-_multivariate-_time-_series-_software_paper_paper.html  menudata.js  module_8c.html  module_8c_source.html  module_8cpp.html  pages.html  structdata.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_c.js  files_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
doc/latex/: _m_d___d_t_w_8c.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  files.tex  module_8c.tex  refman.tex
exec/: anomaly_detection_obj  classification_obj  subsequence_search_obj
include/: header.h
output/anomaly_detection/: outputCPU_owpTh.csv
output/classification/: rDTW Classification_BS1024_tr1024_ts_128.txt  rED_Classification_BS512_tr1024_ts_128.txt
paper/: paper.bib  paper.md
source/: MD_DTW.c  MD_DTW.cu  module.c  module.cu
source code/: anomaly_detection.cu  classification.cu  dtw.cu  dtw_h.h  subsequence_search.cu
src/: MD_DTW.cu  Makefile.am  module.cu
tests/: Makefile.am  benchmark.cu  check_MD_DTW.cu  make_unit_test  unit_test
